[package]
name = "serde_hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.11.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
smallvec = "1.11.0"
thiserror = "1.0.40"
