[package]
name = "serde_hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
smallvec = "1.11"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
serde_yaml = "0.9"
serde_bytes = "0.11"
indoc = "2"
