[package]
name = "serde_hooks"
version = "0.1.1"
edition = "2021"
authors = ["Anatoliy Samara <anatoliy@2xsamara.com>"]
license = "MIT OR Apache-2.0"
categories = ["encoding", "parsing", "rust-patterns"]
description = "Runtime hooks for serde"
documentation = "https://docs.rs/serde_hooks"
keywords = ["serde", "serialization", "callback", "hook", "introspection"]
repository = "https://github.com/anatols/serde_hooks"
homepage = "https://github.com/anatols/serde_hooks"
rust-version = "1.68"
readme = "README.md"
include = ["docs", "examples", "src", "tests", "LICENSE*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
smallvec = "1.11"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
serde_yaml = "0.9"
serde_bytes = "0.11"
indoc = "2"
serde-reflection = "0.3"
ron = "0.8"
bincode = "1.3"

[[example]]
name = "ser"
test = true
crate-type = ["lib"]
doc-scrape-examples = true
